# configur

./: .gitignore  LICENSE  README.md  example.toml  pyproject.toml
configur/: __init__.py  config.py
tests/: test_config.py  test_log_config.py
