[tool.poetry]
name = "configur"
version = "0.1.5"
description = "TOML-based configuration for Python"
authors = ["Studio Trackr <info@studiotrackr.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/StudioTrackr/configur"
repository = "https://github.com/StudioTrackr/configur"
keywords = ["configuration", "config", "settings"]
packages = [
    { include = "configur" },
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.18.4"
python-box = "^5.3.0"
tomlkit = "^0.7.2"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
moto = {version = "^2.1.0", extras = ["ssm"]}
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
